--- a/index.html
+++ b/index.html
@@ -80,21 +80,23 @@
                         </div>
                     </div>
                     <div class="conteudo-loja">
-                        <div>
-                            <h2>Sobre o espaço</h2>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sed consequatur ex, cumque quo quis neque aperiam odit nostrum distinctio quos voluptate consectetur nulla optio quia earum blanditiis voluptatum voluptas.
-                            </p>
-                            <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id iste minus ut laborum illo nam doloribus odio commodi accusantium ipsam, architecto reprehenderit totam officiis culpa saepe eum odit cupiditate cumque!
-                            </p>
-                            <ul>
-                                <li>Item 1</li>
-                                <li>Item 2</li>
-                                <li>Item 3</li>
-                            </ul>
+                        <div class="reverse">
+                            <div >
+                                <h2>Sobre o espaço</h2>
+                                <p>
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sed consequatur ex, cumque quo quis neque aperiam odit nostrum distinctio quos voluptate consectetur nulla optio quia earum blanditiis voluptatum voluptas.
+                                </p>
+                                <p>
+                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id iste minus ut laborum illo nam doloribus odio commodi accusantium ipsam, architecto reprehenderit totam officiis culpa saepe eum odit cupiditate cumque!
+                                </p>
+                                <ul>
+                                    <li>Item 1</li>
+                                    <li>Item 2</li>
+                                    <li>Item 3</li>
+                                </ul>
+                            </div>
+                            <img src="./images/espaco.jpg" alt="">
                         </div>
-                        <img src="./images/espaco.jpg" alt="">
                     </div>
                 </div>
             </div>
@@ -261,7 +263,7 @@
         <footer>
             <div class="container container-flex">
                 <p>          
-                    2022 &copy; EBAC Motors - Todos os direitos reservados
+                    2022 &copy; JOTA Motors - Todos os direitos reservados
                 </p>
                 <ul class="container-flex">
                     <li>
