--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="tela">
         <header>
             <div class="container container-flex">
-                <h1>JOTA motors</h1>
+                <h1>JOTA Motors</h1>
                 <div class="menu-hamburger">
                     <span></span>
                     <span></span>
@@ -44,8 +44,8 @@
         </header>
         <div id="carousel-imagens" >
             <img class="carros" src="./images/slide1.png" alt="carro Porsche">
-            <img class="carros" src="./images/slide2.png" alt="Carro BMW">
-            <img class="carros" src="./images/slide3.png" alt="Carro Ford">
+            <!--<img class="carros" src="./images/slide2.png" alt="Carro BMW">
+            <img class="carros" src="./images/slide3.png" alt="Carro Ford">-->
         </div>
         <section id="sobre-a-loja" >
             <div class="container container-flex conteudo">
@@ -104,7 +104,7 @@
     
         <section id="destaque">
             <div class="container">
-                <h2>Em destaque</h2>
+                <h2 class="center">Em destaque</h2>
                 <ul class="container-flex lista-veiculos">
                     <li>
                         <img src="./images/carro-bmw.png">
@@ -167,7 +167,7 @@
     
         <section id="promocao">
             <div class="container">
-                <h2>Promoções</h2>
+                <h2 class="center">Promoções</h2>
                 <ul class="container-flex lista-veiculos">
                     <li>
                         <img src="./images/carro-bmw.png">
