--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </header>
         <div id="carousel-imagens" >
             <img class="carros" src="./images/slide1.png" alt="carro Porsche">
-            <!--<img class="carros" src="./images/slide2.png" alt="Carro BMW">
-            <img class="carros" src="./images/slide3.png" alt="Carro Ford">-->
+            <img class="carros" src="./images/slide2.png" alt="Carro BMW">
+            <img class="carros" src="./images/slide3.png" alt="Carro Ford">
         </div>
         <section id="sobre-a-loja" >
             <div class="container container-flex conteudo">
