alteração de conteudo

--- a/index.html
+++ b/index.html
@@ -72,10 +72,15 @@
                         <div >
                             <h2>Sobre a JOTA Motors</h2>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sed consequatur ex, cumque quo quis neque aperiam odit nostrum distinctio quos voluptate consectetur nulla optio quia earum blanditiis voluptatum voluptas.
+                                Bem-vindo à nossa loja de carros, onde você encontrará uma ampla seleção de veículos de alta 
+                                qualidade para atender às suas necessidades de mobilidade. Nossa loja é conhecida 
+                                por oferecer carros confiáveis, com garantia e procedência
                             </p>
                             <p>
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id iste minus ut laborum illo nam doloribus odio commodi accusantium ipsam, architecto reprehenderit totam officiis culpa saepe eum odit cupiditate cumque!
+                                Trabalhamos com as principais marcas e modelos do mercado, proporcionando 
+                                opções para todos os gostos e orçamentos. 
+                                Nossa equipe de especialistas está pronta para ajudá-lo a encontrar o 
+                                carro dos seus sonhos, orientando-o em cada etapa da sua jornada.
                             </p>                                                    
                         </div>
                     </div>
@@ -84,15 +89,27 @@
                             <div >
                                 <h2>Sobre o espaço</h2>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta sed consequatur ex, cumque quo quis neque aperiam odit nostrum distinctio quos voluptate consectetur nulla optio quia earum blanditiis voluptatum voluptas.
+                                    Em nossa loja de carros, você encontrará um espaço amplo e moderno, projetado para oferecer a melhor experiência 
+                                    de compra aos nossos clientes. Nossa showroom é cuidadosamente organizada, 
+                                    permitindo que você explore os veículos com facilidade e conforto
                                 </p>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id iste minus ut laborum illo nam doloribus odio commodi accusantium ipsam, architecto reprehenderit totam officiis culpa saepe eum odit cupiditate cumque!
+                                    Além disso, contamos com uma área de atendimento ao cliente acolhedora, onde nossa equipe 
+                                    especializada estará pronta para responder às suas perguntas e fornecer assistência personalizada
                                 </p>
                                 <ul>
-                                    <li>Item 1</li>
-                                    <li>Item 2</li>
-                                    <li>Item 3</li>
+                                    <li>
+                                        Carros novos e usados: Oferecemos uma variedade de carros novos diretamente dos fabricantes, 
+                                        bem como opções de veículos usados de qualidade.
+                                    </li>
+                                    <li>
+                                        Serviços de financiamento: Para tornar a compra do seu carro mais acessível, 
+                                        oferecemos serviços de financiamento. 
+                                    </li>
+                                    <li>
+                                        Serviços de manutenção e peças: Além da venda de carros, também oferecemos serviços 
+                                        de manutenção e reparo em nossa oficina. 
+                                    </li>
                                 </ul>
                             </div>
                             <img src="./images/espaco.jpg" alt="">
