--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                 <h2 class="center">Em destaque</h2>
                 <ul class="container-flex lista-veiculos">
                     <li>
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2013/08/11/03/40/car-171422_640.jpg">
+                        <h3>Carro 1</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -135,8 +135,8 @@
                         <button type="button">Tenho interesse</button>
                     </li>
                     <li class="item-central">
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2022/06/21/08/21/car-7275386_640.jpg">
+                        <h3>Carro 2</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -146,8 +146,8 @@
                         <button type="button">Tenho interesse</button>
                     </li>
                     <li>
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2014/09/07/22/34/car-race-438467_640.jpg">
+                        <h3>Carro 3</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -157,8 +157,8 @@
                         <button type="button">Tenho interesse</button>
                     </li>
                     <li>
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2015/01/19/13/51/car-604019_640.jpg">
+                        <h3>Carro 4</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -168,8 +168,8 @@
                         <button type="button">Tenho interesse</button>
                     </li>
                     <li class="item-central">
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2016/05/06/16/32/car-1376190_640.jpg">
+                        <h3>Carro 5</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -180,15 +180,15 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section>        
     
         <section id="promocao">
             <div class="container">
                 <h2 class="center">Promoções</h2>
                 <ul class="container-flex lista-veiculos">
                     <li>
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2015/06/03/13/38/plymouth-796441_1280.jpg">
+                        <h3>Carro 1</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -199,8 +199,8 @@
                         <button type="button">Tenho interesse</button>
                     </li>
                     <li class="item-central">
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2013/08/11/03/40/car-171422_640.jpg">
+                        <h3>Carro 2</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -211,8 +211,8 @@
                         <button type="button">Tenho interesse</button>
                     </li>
                     <li>
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2022/06/21/08/21/car-7275386_640.jpg">
+                        <h3>Carro 3</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -223,8 +223,8 @@
                         <button type="button">Tenho interesse</button>
                     </li>
                     <li>
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2014/09/07/22/34/car-race-438467_640.jpg">
+                        <h3>Carro 4</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -235,8 +235,8 @@
                         <button type="button">Tenho interesse</button>
                     </li>
                     <li class="item-central">
-                        <img src="./images/carro-bmw.png">
-                        <h3>Carro BMW</h3>
+                        <img src="https://cdn.pixabay.com/photo/2016/05/06/16/32/car-1376190_640.jpg">
+                        <h3>Carro 5</h3>
                         <p>
                             Câmbio automático, 4 portas, vidros e travas elétricas
                         </p>
@@ -249,6 +249,7 @@
                 </ul>
             </div>
         </section>
+        
         <section id="contato">
             <div class="container">
                 <h2>Entre em contato</h2>
